[package]
name = "cryptokit"
version = "0.1.0"
authors = ["Tsumida <tsumida@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = ""
thiserror = ""
hs-data = {path = "../hs-data"}
rand = ""
sha2 = ""
base64 = ""
lazy_static = ""