[package]
name = "hotstuff-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = ""
threshold_crypto = { version = "0.4", git = "https://github.com/poanetwork/threshold_crypto" }
sha2 = ""
serde = ""
serde_json = ""
log = "0.4.*"
simplelog = ""
base64 = ""
anyhow = ""
thiserror = ""
lazy_static = ""


# tarpc = { version = "0.22", features =  ["full"]}
# send and recv serde encodedable types over network using tokio.