[package]
name = "hotstuff-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hs-data = {path = "../hs-data"}
cryptokit = {path = "../cryptokit"}
serde = ""
serde_json = ""
log = ""
simplelog = "0.9.0"
thiserror = ""


# tarpc = { version = "0.22", features =  ["full"]}
# send and recv serde encodedable types over network using tokio.
