[package]
name = "hs-data"
version = "0.1.0"
authors = ["Tsumida <tsumida@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = ""
threshold_crypto = { version = "0.4", git = "https://github.com/poanetwork/threshold_crypto" }
rand = "=0.7.3"
sha2 = ""
base64 = ""
thiserror = ""
lazy_static = ""