[package]
name = "hs-prototype"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = ""
threshold_crypto = { version = "0.4", git = "https://github.com/poanetwork/threshold_crypto" }
serde = ""
serde_json = ""