[package]
name = "hs-prototype"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = ""
threshold_crypto = { version = "0.4", git = "https://github.com/poanetwork/threshold_crypto" }
sha2 = ""
serde = ""
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
log = "0.4.*"
simplelog = ""
async-trait = ""

# tarpc = { version = "0.22", features =  ["full"]}
# send and recv serde encodedable types over network using tokio.
# tokio-serde = { version = "0.6", features = ["json"] }
# tokio-util = { version = "0.3", features = ["codec"] }