[package]
name = "hs-test"
version = "0.1.0"
authors = ["Tsumida <tsumida@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotstuff-rs = {path="../hotstuff-rs"}
hs-data = {path = "../hs-data"}
cryptokit = {path = "../cryptokit"}
hss = {path="../hss"}
threshold_crypto = { version = "0.4", git = "https://github.com/poanetwork/threshold_crypto" }
simplelog = ""
log = ""
rand = "=0.7.3"
sqlx = { version = "0.5", features = [ "mysql", "runtime-tokio-rustls" ] }
tokio = {version = "1.2", features=["full"]}
base64 = ""
serde = ""
serde_json = ""