[package]
name = "hss"
version = "0.1.0"
authors = ["Tsumida <tsumida@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotstuff-rs = {path = "../hotstuff-rs"}
pacemaker = {path = "../pacemaker"}
sled = ""
tokio = ""