[package]
name = "hss"
version = "0.1.0"
authors = ["Tsumida <tsumida@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotstuff-rs = {path = "../hotstuff-rs"}
pacemaker = {path = "../pacemaker"}
hs-data = {path = "../hs-data"} 
cryptokit = {path = "../cryptokit"}
base64 = ""
serde = ""
serde_json = ""
simplelog = ""
log = ""
tokio = {version = "1.2", features = ["full"]}
sqlx = { version = "0.5", features = [ "mysql", "runtime-tokio-rustls" ] }
futures = {version="0.3"}
async-trait = ""
thiserror = ""
threshold_crypto = { version = "0.4", git = "https://github.com/poanetwork/threshold_crypto" }