[package]
name = "pacemaker"
version = "0.1.0"
authors = ["Tsumida <tsumida@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hotstuff-rs = { path = "../hotstuff-rs" }
fnv = "1.0.3"
serde = ""
serde_json = ""
futures = "0.3"
tokio = { version = "1.1", features = ["full"] }
libp2p = "0.34"
log = ""
futures-timer = ""
rand = ""
simplelog = ""