[package]
name = "demo"
version = "0.1.0"
authors = ["Tsumida <elsa110249@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hs-data = {path="../../hs-data"}
hotstuff-rs = {path="../../hotstuff-rs"}
pacemaker = {path="../../pacemaker"}
hss = {path="../../hss"}
hs-network = {path="../../hs-network"}
cryptokit = {path="../../cryptokit"}
base64 = ""
futures = "0.3"
tokio = {version = "1.2", features=["full"]}
log = ""
simplelog = ""
serde = ""
serde_json = ""
serde_yaml = ""
threshold_crypto = { version = "0.4", git = "https://github.com/poanetwork/threshold_crypto" }
clap = ""
warp = "0.3"
rand = "=0.7.3"

[[bin]]
name = "generate_sk"
test = false
bench = false

[[bin]]
name = "node_admin"
test = false
bench = false